qt/gen_qwidget.nim


proc fcQWidgetData_new(param1: pointer): ptr cQWidgetData {.importc: "QWidgetData_new".}
proc fcQWidgetData_operatorAssign(self: pointer, param1: pointer): void {.importc: "QWidgetData_operatorAssign".}
proc fcQWidgetData_delete(self: pointer) {.importc: "QWidgetData_delete".}
proc fcQWidget_new(parent: pointer): ptr cQWidget {.importc: "QWidget_new".}
proc fcQWidget_new2(): ptr cQWidget {.importc: "QWidget_new2".}
proc fcQWidget_new3(parent: pointer, f: cint): ptr cQWidget {.importc: "QWidget_new3".}
proc fcQWidget_metaObject(self: pointer, ): pointer {.importc: "QWidget_metaObject".}
proc fcQWidget_metacast(self: pointer, param1: cstring): pointer {.importc: "QWidget_metacast".}
proc fcQWidget_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWidget_metacall".}
proc fcQWidget_tr(s: cstring): struct_miqt_string {.importc: "QWidget_tr".}
proc fcQWidget_trUtf8(s: cstring): struct_miqt_string {.importc: "QWidget_trUtf8".}
proc fcQWidget_devType(self: pointer, ): cint {.importc: "QWidget_devType".}
proc fcQWidget_winId(self: pointer, ): uint {.importc: "QWidget_winId".}
proc fcQWidget_createWinId(self: pointer, ): void {.importc: "QWidget_createWinId".}
proc fcQWidget_internalWinId(self: pointer, ): uint {.importc: "QWidget_internalWinId".}
proc fcQWidget_effectiveWinId(self: pointer, ): uint {.importc: "QWidget_effectiveWinId".}
proc fcQWidget_style(self: pointer, ): pointer {.importc: "QWidget_style".}
proc fcQWidget_setStyle(self: pointer, style: pointer): void {.importc: "QWidget_setStyle".}
proc fcQWidget_isTopLevel(self: pointer, ): bool {.importc: "QWidget_isTopLevel".}
proc fcQWidget_isWindow(self: pointer, ): bool {.importc: "QWidget_isWindow".}
proc fcQWidget_isModal(self: pointer, ): bool {.importc: "QWidget_isModal".}
proc fcQWidget_windowModality(self: pointer, ): cint {.importc: "QWidget_windowModality".}
proc fcQWidget_setWindowModality(self: pointer, windowModality: cint): void {.importc: "QWidget_setWindowModality".}
proc fcQWidget_isEnabled(self: pointer, ): bool {.importc: "QWidget_isEnabled".}
proc fcQWidget_isEnabledTo(self: pointer, param1: pointer): bool {.importc: "QWidget_isEnabledTo".}
proc fcQWidget_isEnabledToTLW(self: pointer, ): bool {.importc: "QWidget_isEnabledToTLW".}
proc fcQWidget_setEnabled(self: pointer, enabled: bool): void {.importc: "QWidget_setEnabled".}
proc fcQWidget_setDisabled(self: pointer, disabled: bool): void {.importc: "QWidget_setDisabled".}
proc fcQWidget_setWindowModified(self: pointer, windowModified: bool): void {.importc: "QWidget_setWindowModified".}
proc fcQWidget_frameGeometry(self: pointer, ): pointer {.importc: "QWidget_frameGeometry".}
proc fcQWidget_geometry(self: pointer, ): pointer {.importc: "QWidget_geometry".}
proc fcQWidget_normalGeometry(self: pointer, ): pointer {.importc: "QWidget_normalGeometry".}
proc fcQWidget_x(self: pointer, ): cint {.importc: "QWidget_x".}
proc fcQWidget_y(self: pointer, ): cint {.importc: "QWidget_y".}
proc fcQWidget_pos(self: pointer, ): pointer {.importc: "QWidget_pos".}
proc fcQWidget_frameSize(self: pointer, ): pointer {.importc: "QWidget_frameSize".}
proc fcQWidget_size(self: pointer, ): pointer {.importc: "QWidget_size".}
proc fcQWidget_width(self: pointer, ): cint {.importc: "QWidget_width".}
proc fcQWidget_height(self: pointer, ): cint {.importc: "QWidget_height".}
proc fcQWidget_rect(self: pointer, ): pointer {.importc: "QWidget_rect".}
proc fcQWidget_childrenRect(self: pointer, ): pointer {.importc: "QWidget_childrenRect".}
proc fcQWidget_childrenRegion(self: pointer, ): pointer {.importc: "QWidget_childrenRegion".}
proc fcQWidget_minimumSize(self: pointer, ): pointer {.importc: "QWidget_minimumSize".}
proc fcQWidget_maximumSize(self: pointer, ): pointer {.importc: "QWidget_maximumSize".}
proc fcQWidget_minimumWidth(self: pointer, ): cint {.importc: "QWidget_minimumWidth".}
proc fcQWidget_minimumHeight(self: pointer, ): cint {.importc: "QWidget_minimumHeight".}
proc fcQWidget_maximumWidth(self: pointer, ): cint {.importc: "QWidget_maximumWidth".}
proc fcQWidget_maximumHeight(self: pointer, ): cint {.importc: "QWidget_maximumHeight".}
proc fcQWidget_setMinimumSize(self: pointer, minimumSize: pointer): void {.importc: "QWidget_setMinimumSize".}
proc fcQWidget_setMinimumSize2(self: pointer, minw: cint, minh: cint): void {.importc: "QWidget_setMinimumSize2".}
proc fcQWidget_setMaximumSize(self: pointer, maximumSize: pointer): void {.importc: "QWidget_setMaximumSize".}
proc fcQWidget_setMaximumSize2(self: pointer, maxw: cint, maxh: cint): void {.importc: "QWidget_setMaximumSize2".}
proc fcQWidget_setMinimumWidth(self: pointer, minw: cint): void {.importc: "QWidget_setMinimumWidth".}
proc fcQWidget_setMinimumHeight(self: pointer, minh: cint): void {.importc: "QWidget_setMinimumHeight".}
proc fcQWidget_setMaximumWidth(self: pointer, maxw: cint): void {.importc: "QWidget_setMaximumWidth".}
proc fcQWidget_setMaximumHeight(self: pointer, maxh: cint): void {.importc: "QWidget_setMaximumHeight".}
proc fcQWidget_sizeIncrement(self: pointer, ): pointer {.importc: "QWidget_sizeIncrement".}
proc fcQWidget_setSizeIncrement(self: pointer, sizeIncrement: pointer): void {.importc: "QWidget_setSizeIncrement".}
proc fcQWidget_setSizeIncrement2(self: pointer, w: cint, h: cint): void {.importc: "QWidget_setSizeIncrement2".}
proc fcQWidget_baseSize(self: pointer, ): pointer {.importc: "QWidget_baseSize".}
proc fcQWidget_setBaseSize(self: pointer, baseSize: pointer): void {.importc: "QWidget_setBaseSize".}
proc fcQWidget_setBaseSize2(self: pointer, basew: cint, baseh: cint): void {.importc: "QWidget_setBaseSize2".}
proc fcQWidget_setFixedSize(self: pointer, fixedSize: pointer): void {.importc: "QWidget_setFixedSize".}
proc fcQWidget_setFixedSize2(self: pointer, w: cint, h: cint): void {.importc: "QWidget_setFixedSize2".}
proc fcQWidget_setFixedWidth(self: pointer, w: cint): void {.importc: "QWidget_setFixedWidth".}
proc fcQWidget_setFixedHeight(self: pointer, h: cint): void {.importc: "QWidget_setFixedHeight".}
proc fcQWidget_mapToGlobal(self: pointer, param1: pointer): pointer {.importc: "QWidget_mapToGlobal".}
proc fcQWidget_mapFromGlobal(self: pointer, param1: pointer): pointer {.importc: "QWidget_mapFromGlobal".}
proc fcQWidget_mapToParent(self: pointer, param1: pointer): pointer {.importc: "QWidget_mapToParent".}
proc fcQWidget_mapFromParent(self: pointer, param1: pointer): pointer {.importc: "QWidget_mapFromParent".}
proc fcQWidget_mapTo(self: pointer, param1: pointer, param2: pointer): pointer {.importc: "QWidget_mapTo".}
proc fcQWidget_mapFrom(self: pointer, param1: pointer, param2: pointer): pointer {.importc: "QWidget_mapFrom".}
proc fcQWidget_window(self: pointer, ): pointer {.importc: "QWidget_window".}
proc fcQWidget_nativeParentWidget(self: pointer, ): pointer {.importc: "QWidget_nativeParentWidget".}
proc fcQWidget_topLevelWidget(self: pointer, ): pointer {.importc: "QWidget_topLevelWidget".}
proc fcQWidget_palette(self: pointer, ): pointer {.importc: "QWidget_palette".}
proc fcQWidget_setPalette(self: pointer, palette: pointer): void {.importc: "QWidget_setPalette".}
proc fcQWidget_setBackgroundRole(self: pointer, backgroundRole: cint): void {.importc: "QWidget_setBackgroundRole".}
proc fcQWidget_backgroundRole(self: pointer, ): cint {.importc: "QWidget_backgroundRole".}
proc fcQWidget_setForegroundRole(self: pointer, foregroundRole: cint): void {.importc: "QWidget_setForegroundRole".}
proc fcQWidget_foregroundRole(self: pointer, ): cint {.importc: "QWidget_foregroundRole".}
proc fcQWidget_font(self: pointer, ): pointer {.importc: "QWidget_font".}
proc fcQWidget_setFont(self: pointer, font: pointer): void {.importc: "QWidget_setFont".}
proc fcQWidget_fontMetrics(self: pointer, ): pointer {.importc: "QWidget_fontMetrics".}
proc fcQWidget_fontInfo(self: pointer, ): pointer {.importc: "QWidget_fontInfo".}
proc fcQWidget_cursor(self: pointer, ): pointer {.importc: "QWidget_cursor".}
proc fcQWidget_setCursor(self: pointer, cursor: pointer): void {.importc: "QWidget_setCursor".}
proc fcQWidget_unsetCursor(self: pointer, ): void {.importc: "QWidget_unsetCursor".}
proc fcQWidget_setMouseTracking(self: pointer, enable: bool): void {.importc: "QWidget_setMouseTracking".}
proc fcQWidget_hasMouseTracking(self: pointer, ): bool {.importc: "QWidget_hasMouseTracking".}
proc fcQWidget_underMouse(self: pointer, ): bool {.importc: "QWidget_underMouse".}
proc fcQWidget_setTabletTracking(self: pointer, enable: bool): void {.importc: "QWidget_setTabletTracking".}
proc fcQWidget_hasTabletTracking(self: pointer, ): bool {.importc: "QWidget_hasTabletTracking".}
proc fcQWidget_setMask(self: pointer, mask: pointer): void {.importc: "QWidget_setMask".}
proc fcQWidget_setMaskWithMask(self: pointer, mask: pointer): void {.importc: "QWidget_setMaskWithMask".}
proc fcQWidget_mask(self: pointer, ): pointer {.importc: "QWidget_mask".}
proc fcQWidget_clearMask(self: pointer, ): void {.importc: "QWidget_clearMask".}
proc fcQWidget_render(self: pointer, target: pointer): void {.importc: "QWidget_render".}
proc fcQWidget_renderWithPainter(self: pointer, painter: pointer): void {.importc: "QWidget_renderWithPainter".}
proc fcQWidget_grab(self: pointer, ): pointer {.importc: "QWidget_grab".}
proc fcQWidget_graphicsEffect(self: pointer, ): pointer {.importc: "QWidget_graphicsEffect".}
proc fcQWidget_setGraphicsEffect(self: pointer, effect: pointer): void {.importc: "QWidget_setGraphicsEffect".}
proc fcQWidget_grabGesture(self: pointer, typeVal: cint): void {.importc: "QWidget_grabGesture".}
proc fcQWidget_ungrabGesture(self: pointer, typeVal: cint): void {.importc: "QWidget_ungrabGesture".}
proc fcQWidget_setWindowTitle(self: pointer, windowTitle: struct_miqt_string): void {.importc: "QWidget_setWindowTitle".}
proc fcQWidget_setStyleSheet(self: pointer, styleSheet: struct_miqt_string): void {.importc: "QWidget_setStyleSheet".}
proc fcQWidget_styleSheet(self: pointer, ): struct_miqt_string {.importc: "QWidget_styleSheet".}
proc fcQWidget_windowTitle(self: pointer, ): struct_miqt_string {.importc: "QWidget_windowTitle".}
proc fcQWidget_setWindowIcon(self: pointer, icon: pointer): void {.importc: "QWidget_setWindowIcon".}
proc fcQWidget_windowIcon(self: pointer, ): pointer {.importc: "QWidget_windowIcon".}
proc fcQWidget_setWindowIconText(self: pointer, windowIconText: struct_miqt_string): void {.importc: "QWidget_setWindowIconText".}
proc fcQWidget_windowIconText(self: pointer, ): struct_miqt_string {.importc: "QWidget_windowIconText".}
proc fcQWidget_setWindowRole(self: pointer, windowRole: struct_miqt_string): void {.importc: "QWidget_setWindowRole".}
proc fcQWidget_windowRole(self: pointer, ): struct_miqt_string {.importc: "QWidget_windowRole".}
proc fcQWidget_setWindowFilePath(self: pointer, filePath: struct_miqt_string): void {.importc: "QWidget_setWindowFilePath".}
proc fcQWidget_windowFilePath(self: pointer, ): struct_miqt_string {.importc: "QWidget_windowFilePath".}
proc fcQWidget_setWindowOpacity(self: pointer, level: float64): void {.importc: "QWidget_setWindowOpacity".}
proc fcQWidget_windowOpacity(self: pointer, ): float64 {.importc: "QWidget_windowOpacity".}
proc fcQWidget_isWindowModified(self: pointer, ): bool {.importc: "QWidget_isWindowModified".}
proc fcQWidget_setToolTip(self: pointer, toolTip: struct_miqt_string): void {.importc: "QWidget_setToolTip".}
proc fcQWidget_toolTip(self: pointer, ): struct_miqt_string {.importc: "QWidget_toolTip".}
proc fcQWidget_setToolTipDuration(self: pointer, msec: cint): void {.importc: "QWidget_setToolTipDuration".}
proc fcQWidget_toolTipDuration(self: pointer, ): cint {.importc: "QWidget_toolTipDuration".}
proc fcQWidget_setStatusTip(self: pointer, statusTip: struct_miqt_string): void {.importc: "QWidget_setStatusTip".}
proc fcQWidget_statusTip(self: pointer, ): struct_miqt_string {.importc: "QWidget_statusTip".}
proc fcQWidget_setWhatsThis(self: pointer, whatsThis: struct_miqt_string): void {.importc: "QWidget_setWhatsThis".}
